--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
 streamlit==1.28.2
-openai==1.6.1
+openai==1.35.0
 langchain==0.3.0
 langchain-community==0.3.0
 langchain-openai==0.2.0
-python-dotenv==1.0.0
-pandas==2.1.4
-pydantic==2.5.2
 chromadb==0.4.24
+python-dotenv==1.0.0
+pandas>=2.2.0
 unstructured==0.15.0
-pypdf==3.17.4
+pypdf==4.3.0
 python-docx==1.1.0
 tiktoken==0.5.2
