--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,6 @@
-streamlit==1.28.2
-openai==1.35.0
-langchain==0.3.0
-langchain-community==0.3.0
-langchain-openai==0.2.0
-chromadb==0.4.24
-python-dotenv==1.0.0
-pandas>=2.2.0
-unstructured==0.15.0
-pypdf==4.3.0
-python-docx==1.1.0
-tiktoken==0.5.2
+streamlit
+openai
+langchain-community
+langchain-openai
+chromadb
+python-dotenv
